# wonderbot-v1

./: README.md  llm_consolidation_manifest.json  llm_project_audit.md  pyproject.toml  requirements.txt  run_wonderbot.bat  run_wonderbot.sh
configs/: default.toml
docs/: best_engine.txt
tests/: test_agent.py
wonderbot/: __init__.py  agent.py  cli.py  config.py  llm_backends.py  perception.py
wonderbot/sensors/: __init__.py  camera.py  microphone.py
