[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wonderbot"
version = "0.1.0"
description = "Consolidated continuous agent base with event-coded memory, ganglion clock, and swappable LLM backends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI for wofl" }]
dependencies = []

[project.optional-dependencies]
hf = [
  "transformers>=4.40.0",
  "torch>=2.2.0"
]
vision = [
  "opencv-python>=4.10.0"
]
audio = [
  "sounddevice>=0.4.7",
  "soundfile>=0.12.1"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
wonderbot = "wonderbot.cli:main"
seed-legacy = "scripts.seed_from_legacy:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["wonderbot*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
